simple-python-web-server-in-k8s/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /apple
          backend:
            serviceName: apple-service
            servicePort: 5678
        - path: /banana
          backend:
            serviceName: banana-service
            servicePort: 5678
        - path: /
          backend:
            serviceName: simple-app-service
            servicePort: 9080
# spec:
#   rules:
#   - http:
#       paths:
#       - backend:
#           serviceName: simple-app-service
#           servicePort: 9080
